--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,25 +1,13 @@
-appplication {
+application {
   name = "FunProg"
   name = ${?APP_NAME} # Pour surcharger la valeur par un variable d'environnement
 
-  input-file = "/tmp/input.txt"
-  input-file = ${?INPUT_FILE}
+  input-file = "7,7;1,2,E;DAGA;3,4,N;ADA;3,4,N;ADA;"
+  input-file = ${?INPUT_FILE} # NE PAS MODIFIER
 
-  output-json-file = "/tmp/output.json"
-  output-json-file = ${?OUTPUT_JSON_FILE}
+  output-json-file = "./jsonParser.json"
+  output-json-file = ${?OUTPUT_JSON_FILE} # NE PAS MODIFIER
 
-  output-csv-file = "/tmp/output.csv"
-  output-csv-file = ${?OUTPUT_CSV_FILE}
-}
-
-# A supprimer
-example {
-  message = "hi buddy"
-  message = ${?EXAMPLE_MESSAGE}
-  
-  one = 1
-  one = ${?EXAMPLE_ONE}
-
-  yes = "true"
-  yes = ${?EXAMPLE_YES}
+  output-csv-file = "./CsvLawnmower.csv"
+  output-csv-file = ${?OUTPUT_CSV_FILE} # NE PAS MODIFIER
 }
